# video2vec

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AUDIT.md  CMakeLists.txt  README.md  conanfile.py  vcpkg.json
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_core.cpp
cmake/: video2vecConfig.cmake.in
docs/: API.md  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  PERFORMANCE.md  ROADMAP.md
examples/: CMakeLists.txt  basic_decode.cpp  basic_pipeline.cpp
include/video2vec/: version.hpp
include/video2vec/asr/: asr_backend.hpp  whisper_backend.hpp
include/video2vec/core/: cancellation.hpp  config.hpp  logger.hpp  memory.hpp  metrics.hpp  progress.hpp  result.hpp  thread_pool.hpp
include/video2vec/embedding/: embedding_backend.hpp  onnx_backend.hpp
include/video2vec/ffmpeg/: audio_buffer.hpp  decoder.hpp  demuxer.hpp  media.hpp  types.hpp
include/video2vec/flatbuffers/: packager.hpp
include/video2vec/index/: faiss_store.hpp  vector_store.hpp
include/video2vec/ocr/: ocr_backend.hpp  tesseract_backend.hpp
include/video2vec/query/: query_engine.hpp
include/video2vec/sync/: synchronizer.hpp  timestamp.hpp
include/video2vec/vision/: frame.hpp  frame_selector.hpp  patch_extractor.hpp
include/video2vec/windowing/: window.hpp  windowing.hpp
scripts/: asan.supp  build.sh  ci-setup-deps.sh
src/asr/: CMakeLists.txt  whisper_backend.cpp  whisper_backend_stub.cpp
src/cli/: CMakeLists.txt  ask.cpp  load_to_llm.cpp  qa.cpp  vec2index.cpp  video2vec_cli.cpp
src/core/: CMakeLists.txt  cancellation.cpp  config.cpp  logger.cpp  memory.cpp  metrics.cpp  thread_pool.cpp
src/embedding/: CMakeLists.txt  onnx_backend.cpp  onnx_backend_stub.cpp
src/ffmpeg/: CMakeLists.txt  audio_buffer.cpp  decoder.cpp  decoder_impl.hpp  demuxer.cpp  ffmpeg_helpers.hpp  media.cpp
src/flatbuffers/: CMakeLists.txt  packager.cpp  schema.fbs
src/index/: CMakeLists.txt  faiss_store.cpp
src/ocr/: CMakeLists.txt  tesseract_backend.cpp  tesseract_backend_stub.cpp
src/query/: CMakeLists.txt  query_engine.cpp
src/sync/: CMakeLists.txt  synchronizer.cpp
src/vision/: CMakeLists.txt  frame_selector.cpp  patch_extractor.cpp
src/windowing/: CMakeLists.txt  windowing.cpp
tests/: CMakeLists.txt
tests/integration/: test_e2e.cpp  test_pipeline.cpp  test_real_backends.cpp
tests/sdk_consumer/: CMakeLists.txt  consumer_test.cpp
tests/unit/: test_core.cpp  test_sync.cpp  test_windowing.cpp
